# opencv_ile_serit_takibi-

./: arac_tespiti.py  arac_tespiti_video.py  image.py  video.py
my_bt_project/: CMakeLists.txt  my_tree.xml
my_bt_project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_bt_project/install/my_bt_project/share/my_bt_project/: package.bash  package.zsh
my_bt_project/src/: behavior_tree_main.cpp  detect_obstacle_node.cpp  stop_robot_node.cpp
